--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-import": "^1.12.0",
     "core-js": "^2.6.5",
     "file-saver": "^2.0.2",
+    "jquery": "^3.4.1",
     "less-loader": "^5.0.0",
     "moment": "^2.24.0",
     "pubsub-js": "^1.7.0",
