--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-loader": "^15.7.0",
     "vue-router": "^3.0.6",
     "vuex": "^3.1.1",
+    "vuex-persistedstate": "^2.5.4",
     "xlsx": "^0.14.4"
   },
   "devDependencies": {
